@@ -1,6 +1,8 @@
 0.6.1:
  - fix bug in fixing permission on /var/log/cloud-init.log (LP: #704509)
  - improve comment strings in rsyslog file tools/21-cloudinit.conf
+ - add previous-instance-id and previous-datasource files to datadir
+ - add 'datasource' file to instance dir
 0.6.0:
  - change permissions of /var/log/cloud-init.log to accomodate
    syslog writing to it (LP: #704509)
